# engine

./: .eslintrc.js  .gitignore  .gitmodules  package-lock.json  package.json  webpack.config.js
cppwrapper/: CMakeLists.txt  hello.html  jsbuild.sh  main.cpp
cppwrapper/game/: Game.cpp  Game.h
cppwrapper/game/objects/: Sprite.cpp  Sprite.h
resources/common/: decals.json  decals.tps
resources/models/: anim1.dae  anim1.mb  anim1.mdl  anim1_2.dae  anim1_2.mb  anim1_2.mdl  box_pyramid.dae  girl copy.mb  girl error.mb  girl.dae  girl.mb  girl.mdl  girl.opencollada.ma  girl_my.dae  girl_my.mdl  girl_run.mb  group.mdl  instance.dae  instance.mdl  plane.dae  pyramid.dae  pyramid_anim.dae  pyramid_sel.dae  skin_cilynder.dae  skin_cilynder.mb  skin_cilynder.mdl  soldier.dae  soldier.mb  soldier.mdl
resources/models/textureTest/: textured_cube.dae  textured_cube.mdl  textured_cube.opencollada.ma  textured_plane.dae  textured_plane.mdl
resources/shaderTpl/: lighting.tpl  projectedTexture.tpl  root.shader  root.tpl  terrain.tpl  uniforms_fs.tpl  uniforms_vs.tpl  vertexColor.tpl
resources/shaderTpl/debug/: depth.glsl  depthPerspective.glsl
resources/shaderTpl/posteffect/: root.tpl
resources/shaders/: _white.shader  directionalLighting.shader  directionalLightingTexture.shader  skinnedMesh.shader  vertexColor.shader  white.shader
resources/terrain/: terrain.raw
scripts/: collada-convert.js
scripts/includes/: collada-animation.js  collada-geometry.js  collada-hierarchy.js  collada-material.js  collada-skinning.js  math.js
src/: BaseScene.js  Game.js  index.js  utils.js
src/engine/: Application.js  Input.js  Resources.js  enginePool.js
src/engine/animation/: AnimationController.js  AnimationData.js  (+2 more)
src/entities/: AxisBasisObject.js  Camera.js  GridEntity.js
src/scenes/: GameObjectScene.js  ParticleScene.js  RigidbodyScene.js
(+40 files in other folders)
